[project]
name = "sam-opendata"
version = "0.1.0"
description = "Entity graph construction from SAM.gov public registration data"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.1",
    "httpx>=0.28.1",
    "mammoth>=1.12.0",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "splink>=4.0.16",
]
